--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "eject": "react-scripts eject",
     "server": "nodemon --inspect --ignore src/ -e js,graphql server/apollo-server.js",
     "lint:all": "eslint --fix --ignore-pattern 'node_modules/' .",
-    "lint:schema": "npx graphql-schema-linter schema.graphql"
+    "lint:schema": "npx graphql-schema-linter schema.graphql",
+    "graph": "graphql-codegen --config codegen.yml"
   },
   "proxy": "http://localhost:4000/",
   "graphql-schema-linter": {
@@ -32,13 +33,22 @@
     "apollo-link-batch-http": "^1.2.3",
     "apollo-server-express": "^2.0.7",
     "express": "^4.16.3",
-    "graphql": "^14.0.2",
+    "graphql": "^14.4.2",
     "react": "^16.5.2",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.5.0",
+    "@graphql-codegen/introspection": "1.5.0",
+    "@graphql-codegen/typescript": "1.5.0",
+    "@graphql-codegen/typescript-resolvers": "1.5.0",
+    "@types/express": "^4.17.0",
+    "@types/graphql": "^14.2.3",
+    "@types/node": "^12.7.1",
+    "cpx": "^1.5.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "graphql-schema-linter": "^0.1.6",
