--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,14 @@
     "compilerOptions": {
         "outDir": "./dist",
         "allowJs": true,
-        "target": "es6",
+        "target": "es2016",
         "module": "commonjs",
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "lib": ["es2016", "esnext.asynciterable"],
         "resolveJsonModule": true
     },
     "include": [
